--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,17 @@
-safe:        false
-auto:        false
-server:      false
-server_port: 4000
-baseurl:    /
-url: http://mikelikesbikes.com/
+safe:         false
+baseurl:      /
+url:          http://mikelikesbikes.com/
 
-source:      .
-destination: ./_site
-plugins:     ./_plugins
-exclude:     [Gemfile, Gemfile.lock, .ruby-version]
+source:       .
+destination:  ./_site
+plugins:      ./_plugins
+exclude:      [Gemfile, Gemfile.lock, .ruby-version, bin]
 
-future:      true
-lsi:         false
-pygments:    false
-markdown:    maruku
-permalink:   pretty
+future:       true
+lsi:          false
+pygments:     false
+markdown:     maruku
+permalink:    pretty
 
 maruku:
   use_tex:    false
@@ -44,6 +41,7 @@ kramdown:
     coderay_bold_every: 10
     coderay_css: style
 
+
 openid_cfg:
   openid:
     server: http://www.myopenid.com/server
@@ -56,3 +54,4 @@ openid_cfg:
 navigation:
   contact: Contact
   resume: Resume
+
